# deutschlandtarif-data

./: 01-update-data.py  02-derive-data.py  README.md  pyproject.toml
.github/workflows/: update-data.yml
data/: Gleichstellungen.csv  Grenzbahnhöfe.csv  Leitpunktkürzel.csv  Regionen.csv  Tarifpunktverzeichnis.csv  last_modified.csv
derived/: Gleichstellungen.json  Grenzbahnhöfe.json  Leitpunktkürzel.json  Regionen.json  Tarifpunktverzeichnis.json  last_modified.json
